app/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    application: sso
    rhsso: 7.5.2.GA
  name: sso
spec:
  replicas: 1
  selector:
    deploymentConfig: sso
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        application: sso
        deploymentConfig: sso
      name: sso
    spec:
      containers:
      - env:
        - name: SSO_HOSTNAME
          value: ""
        - name: DB_MIN_POOL_SIZE
          value: ""
        - name: DB_MAX_POOL_SIZE
          value: ""
        - name: DB_TX_ISOLATION
          value: ""
        - name: JGROUPS_PING_PROTOCOL
          value: openshift.DNS_PING
        - name: OPENSHIFT_DNS_PING_SERVICE_NAME
          value: sso-ping
        - name: OPENSHIFT_DNS_PING_SERVICE_PORT
          value: "8888"
        - name: X509_CA_BUNDLE
          value: /var/run/configmaps/service-ca/service-ca.crt /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - name: JGROUPS_CLUSTER_PASSWORD
          value: va1auYexUeRpnvkfOnyeTj78dK32fKkD
        - name: SSO_ADMIN_USERNAME
          value: admin
        - name: SSO_ADMIN_PASSWORD
          value: a8xum5GwKMlSEVvkpHIxCN6nwByPOlPN
        - name: SSO_REALM
          value: ""
        - name: SSO_SERVICE_USERNAME
          value: ""
        - name: SSO_SERVICE_PASSWORD
          value: ""
      image: sso
      imagePullPolicy: Always
      livenessProbe:
        exec:
          command:
          - /bin/bash
          - -c
          - /opt/eap/bin/livenessProbe.sh
        initialDelaySeconds: 60
        name: sso
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8888
          name: ping
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /opt/eap/bin/readinessProbe.sh
        resources:
          limits:
            memory: 1Gi
        volumeMounts:
        - mountPath: /etc/x509/https
          name: sso-x509-https-volume
          readOnly: true
        - mountPath: /etc/x509/jgroups
          name: sso-x509-jgroups-volume
          readOnly: true
        - mountPath: /var/run/configmaps/service-ca
          name: service-ca
          readOnly: true
      terminationGracePeriodSeconds: 75
      volumes:
      - name: sso-x509-https-volume
        secret:
          secretName: sso-x509-https-secret
      - name: sso-x509-jgroups-volume
        secret:
          secretName: sso-x509-jgroups-secret
      - configMap:
          name: sso-service-ca
        name: service-ca
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - sso
      from:
        kind: ImageStreamTag
        name: sso75-openshift-rhel8:7.5
        namespace: openshift
    type: ImageChange
  - type: ConfigChange
