app/service-ping.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-ping
  labels:
    applicationconfig: "sso"
  annotations:
    description: "The JGroups ping port for clustering."
    service.alpha.openshift.io/serving-cert-secret-name: "sso-x509-https-secret"
spec:
  ports:
    - name: ping
      port: 8888
  publishNotReadyAddresses: true
  selector:
    deploymentConfig: sso
