app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso
  labels:
    applicationconfig: "sso"
  annotations:
    description: "The web server's https port."
    service.alpha.openshift.io/serving-cert-secret-name: "sso-x509-https-secret"
spec:
  ports:
    - name: https
      port: 8443
      targetPort: 8443
  selector:
    deploymentConfig: sso
